frontend/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Backgrounds */
.earth-background {
  background-image: url('/backgrounds/earth.jpg');
  background-size: cover;
  background-position: center;
  min-height: 100vh;
  /* z-index: -10; */
  /* position: relative; */
}

.jeep-background {
  background-image: url('/backgrounds/jeep.jpg');
  background-size: cover;
  background-position: center;
  min-height: 100vh;
  z-index: -10;
  position: relative;
}

.stars-background {
  background-image: url('/backgrounds/stars.jpg');
  background-size: cover;
  background-position: center;
  min-height: 100vh;
  /* z-index: -10; */
  /* position: relative; */
}

.screen-overlay {
  background-image: url('/overlays/screen-overlay.png');
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  /* z-index: -5; */
  background-size: cover;
  background-position: center;
  min-height: 100vh;
  position: absolute;
  /* set opacity customly in tailwind with 'opacity-90' */
}

@media (max-width: 800px) {
  .earth-background,
  .jeep-background,
  .screen-overlay {
    min-height: 50vh;
  }
}

/* Custom Card sizes */
.small-card {
  position: relative;
  object-fit: cover;
  background-size: contain;
  background-position: center;
  width: 288px;
  width: 160px;
  height: 224px;
  border-radius: 8px;
}

.wide-card {
  position: relative;
  object-fit: cover;
  background-size: contain;
  background-position: center;
  width: 288px;
  height: 162px;
  border-radius: 8px;
}

.medium-card {
  position: relative;
  object-fit: cover;
  background-size: contain;
  background-position: center;
  top: 334px;
  left: 63px;
  width: 201px;
  height: 283px;
}


.large-card {
  position: relative;
  object-fit: cover;
  background-size: contain;
  background-position: center;
  margin-top: 36px; /* Adjusted to margin-top */
  width: 288px;
  height: 400px;
  border-radius: 8px; /* Tailwind equivalent: rounded-lg */
  overflow: hidden; /* Prevents vertical overflow */
}


/* Scroll Features on Swiping  */
/*.scroll-container {
  overflow-y: scroll;
  scroll-snap-type: y mandatory;
  height: 100vh;
}

.section {
  height: 100vh;
  scroll-snap-align: start;

/* Hide on screens larger than the 'md' breakpoint (i.e., desktops) */
.hiddenOnDesktop {
  @apply block md:hidden;
}

/* Hide on screens smaller than the 'md' breakpoint (i.e., mobile devices) */
.hiddenOnMobile {
  @apply hidden md:block;
}

/* Text */
.text-top-quest {
  position: absolute;
  top: -6px;
  left: 12px;
  font-family: DM Sans;
  font-size: 84px;
  font-weight: 700;
  line-height: 110px;
  color: #9095A080;
  /* z-index: 0;  */
}

